--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,10 @@
 #left-sidebar{
+
+  position: fixed;
+  width: 210px;
+  /*height: 387px;*/
+  bottom: auto;
+  top: 0;
   /* fallback */
   background-color: #dc2430;
   background: url(../images/left-sidebar.png);
@@ -18,10 +24,15 @@
 
   /* Opera 11.10+ */
   background: -o-linear-gradient(top, #853f91, #dc2430);
+
+  -webkit-box-shadow: 10px 0px 10px -8px rgba(0,0,0,0.4);
+-moz-box-shadow: 10px 0px 10px -8px rgba(0,0,0,0.4);
+box-shadow: 10px 0px 10px -8px rgba(0,0,0,0.4);
 }
+
 .submenu{
 	color: #fff;
-	padding: 10px;
+	padding: 10px 10px 10px 15px;
 	display: block;
 
 }
